# walide

./: LICENSE.txt  README.md  pyproject.toml
walide/: __init__.py  crossover.py  de.py  fitness.py  generator.py  mutate.py  selection.py
walide.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
